--- a/test/infrastructure/docker/config/crd/bases/infrastructure.cluster.x-k8s.io_dockermachinetemplates.yaml
+++ b/test/infrastructure/docker/config/crd/bases/infrastructure.cluster.x-k8s.io_dockermachinetemplates.yaml
@@ -132,6 +132,9 @@ spec:
                         description: ProviderID will be the container name in ProviderID
                           format (docker:////<containername>)
                         type: string
+                      network:
+                        description: Network describes the name of the network to use for kind
+                        type: string
                     type: object
                 required:
                 - spec
