--- a/test/infrastructure/docker/config/crd/bases/infrastructure.cluster.x-k8s.io_dockermachinepools.yaml
+++ b/test/infrastructure/docker/config/crd/bases/infrastructure.cluster.x-k8s.io_dockermachinepools.yaml
@@ -89,8 +89,8 @@ spec:
                     type: array
                   network:
                     description: |-
-                      Network describes the name of the network to use for kind
-                      It will fallback to 'kind' if not specified
+                      Network describes the name of the network to use in Docker
+                      The default value is 'kind'
                     type: string
                   preLoadImages:
                     description: |-
