--- a/test/extension/config/rbac/role_binding.yaml
+++ b/test/extension/config/rbac/role_binding.yaml
@@ -3,11 +3,13 @@
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
+  creationTimestamp: null
   name: manager-rolebinding
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
   name: manager-role
 subjects:
-  - kind: ServiceAccount
-    name: manager
+- kind: ServiceAccount
+  name: manager
+  namespace: system
