--- a/test/e2e/data/infrastructure-docker/main/clusterclass-quick-start.yaml
+++ b/test/e2e/data/infrastructure-docker/main/clusterclass-quick-start.yaml
@@ -20,7 +20,10 @@ spec:
         name: quick-start-control-plane
     machineHealthCheck:
       maxUnhealthy: 100%
-      # We are intentionally not setting the 'unhealthyConditions' here to test that the field is optional.
+      unhealthyConditions:
+        - type: e2e.remediation.condition
+          status: "False"
+          timeout: 20s
   infrastructure:
     ref:
       apiVersion: infrastructure.cluster.x-k8s.io/v1beta1
