Update Kustomize deprecated syntax:
- patchesStrategicMerge -> patches
- patchesJson6902 -> patches
- vars and varReference -> replacements
- bases -> resources

and bump version

Signed-off-by: Peppi-Lotta <peppi-lotta.saari@est.tech>

--- a/bootstrap/kubeadm/config/crd/patches/webhook_in_kubeadmconfigs.yaml
+++ b/bootstrap/kubeadm/config/crd/patches/webhook_in_kubeadmconfigs.yaml
@@ -15,5 +15,5 @@ spec:
         caBundle: Cg==
         service:
           namespace: system
-          name: webhook-service
+          name: capi-kubeadm-bootstrap-webhook-service
           path: /convert
