--- a/controlplane/kubeadm/config/crd/kustomization.yaml
+++ b/controlplane/kubeadm/config/crd/kustomization.yaml
@@ -1,27 +1,29 @@
-commonLabels:
-  cluster.x-k8s.io/v1beta1: v1beta1
+labels:
+- includeSelectors: true
+  pairs:
+    cluster.x-k8s.io/v1beta1: v1beta1
 
 # This kustomization.yaml is not intended to be run by itself,
 # since it depends on service name and namespace that are out of this kustomize package.
 # It should be run by config/
 resources:
-  - bases/controlplane.cluster.x-k8s.io_kubeadmcontrolplanes.yaml
-  - bases/controlplane.cluster.x-k8s.io_kubeadmcontrolplanetemplates.yaml
+- bases/controlplane.cluster.x-k8s.io_kubeadmcontrolplanes.yaml
+- bases/controlplane.cluster.x-k8s.io_kubeadmcontrolplanetemplates.yaml
 # +kubebuilder:scaffold:crdkustomizeresource
 
-patchesStrategicMerge:
+patches:
   # [WEBHOOK] To enable webhook, uncomment all the sections with [WEBHOOK] prefix.
   # patches here are for enabling the conversion webhook for each CRD
-  - patches/webhook_in_kubeadmcontrolplanes.yaml
-  - patches/webhook_in_kubeadmcontrolplanetemplates.yaml
+- path: patches/webhook_in_kubeadmcontrolplanes.yaml
+- path: patches/webhook_in_kubeadmcontrolplanetemplates.yaml
   # +kubebuilder:scaffold:crdkustomizewebhookpatch
 
   # [CERTMANAGER] To enable webhook, uncomment all the sections with [CERTMANAGER] prefix.
   # patches here are for enabling the CA injection for each CRD
-  - patches/cainjection_in_kubeadmcontrolplanes.yaml
-  - patches/cainjection_in_kubeadmcontrolplanetemplates.yaml
+- path: patches/cainjection_in_kubeadmcontrolplanes.yaml
+- path: patches/cainjection_in_kubeadmcontrolplanetemplates.yaml
 # +kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # the following config is for teaching kustomize how to do kustomization for CRDs.
 configurations:
-  - kustomizeconfig.yaml
+- kustomizeconfig.yaml
