--- a/test/infrastructure/docker/config/crd/kustomization.yaml
+++ b/test/infrastructure/docker/config/crd/kustomization.yaml
@@ -1,5 +1,7 @@
-commonLabels:
-  cluster.x-k8s.io/v1beta1: v1beta1
+labels:
+- includeSelectors: true
+  pairs:
+    cluster.x-k8s.io/v1beta1: v1beta1
 
 # This kustomization.yaml is not intended to be run by itself,
 # since it depends on service name and namespace that are out of this kustomize package.
@@ -7,34 +9,34 @@ commonLabels:
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - bases/infrastructure.cluster.x-k8s.io_dockermachines.yaml
-  - bases/infrastructure.cluster.x-k8s.io_dockerclusters.yaml
-  - bases/infrastructure.cluster.x-k8s.io_dockermachinetemplates.yaml
-  - bases/infrastructure.cluster.x-k8s.io_dockermachinepools.yaml
-  - bases/infrastructure.cluster.x-k8s.io_dockerclustertemplates.yaml
-  - bases/infrastructure.cluster.x-k8s.io_dockermachinepooltemplates.yaml
+- bases/infrastructure.cluster.x-k8s.io_dockermachines.yaml
+- bases/infrastructure.cluster.x-k8s.io_dockerclusters.yaml
+- bases/infrastructure.cluster.x-k8s.io_dockermachinetemplates.yaml
+- bases/infrastructure.cluster.x-k8s.io_dockermachinepools.yaml
+- bases/infrastructure.cluster.x-k8s.io_dockerclustertemplates.yaml
+- bases/infrastructure.cluster.x-k8s.io_dockermachinepooltemplates.yaml
 # +kubebuilder:scaffold:crdkustomizeresource
 
-patchesStrategicMerge:
-  # [WEBHOOK] To enable webhook, uncomment all the sections with [WEBHOOK] prefix.
-  # patches here are for enabling the conversion webhook for each CRD
-  - patches/webhook_in_dockermachinepools.yaml
-  - patches/webhook_in_dockermachines.yaml
-  - patches/webhook_in_dockermachinetemplates.yaml
-  - patches/webhook_in_dockerclusters.yaml
-  - patches/webhook_in_dockerclustertemplates.yaml
-  - patches/webhook_in_dockermachinepooltemplates.yaml
-  # +kubebuilder:scaffold:crdkustomizewebhookpatch
-  # [CERTMANAGER] To enable webhook, uncomment all the sections with [CERTMANAGER] prefix.
-  # patches here are for enabling the CA injection for each CRD
-  - patches/cainjection_in_dockermachinepools.yaml
-  - patches/cainjection_in_dockermachines.yaml
-  - patches/cainjection_in_dockermachinetemplates.yaml
-  - patches/cainjection_in_dockerclusters.yaml
-  - patches/cainjection_in_dockerclustertemplates.yaml
-  - patches/cainjection_in_dockermachinepooltemplates.yaml
+patches:
+# [WEBHOOK] To enable webhook, uncomment all the sections with [WEBHOOK] prefix.
+# patches here are for enabling the conversion webhook for each CRD
+- path: patches/webhook_in_dockermachinepools.yaml
+- path: patches/webhook_in_dockermachines.yaml
+- path: patches/webhook_in_dockermachinetemplates.yaml
+- path: patches/webhook_in_dockerclusters.yaml
+- path: patches/webhook_in_dockerclustertemplates.yaml
+- path: patches/webhook_in_dockermachinepooltemplates.yaml
+# +kubebuilder:scaffold:crdkustomizewebhookpatch
+# [CERTMANAGER] To enable webhook, uncomment all the sections with [CERTMANAGER] prefix.
+# patches here are for enabling the CA injection for each CRD
+- path: patches/cainjection_in_dockermachinepools.yaml
+- path: patches/cainjection_in_dockermachines.yaml
+- path: patches/cainjection_in_dockermachinetemplates.yaml
+- path: patches/cainjection_in_dockerclusters.yaml
+- path: patches/cainjection_in_dockerclustertemplates.yaml
+- path: patches/cainjection_in_dockermachinepooltemplates.yaml
 # +kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # the following config is for teaching kustomize how to do kustomization for CRDs.
 configurations:
-  - kustomizeconfig.yaml
+- kustomizeconfig.yaml
