--- a/test/infrastructure/inmemory/config/crd/kustomization.yaml
+++ b/test/infrastructure/inmemory/config/crd/kustomization.yaml
@@ -1,5 +1,7 @@
-commonLabels:
-  cluster.x-k8s.io/v1beta1: v1alpha1
+labels:
+- includeSelectors: true
+  pairs:
+    cluster.x-k8s.io/v1beta1: v1alpha1
 
 # This kustomization.yaml is not intended to be run by itself,
 # since it depends on service name and namespace that are out of this kustomize package.
@@ -7,28 +9,28 @@ commonLabels:
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - bases/infrastructure.cluster.x-k8s.io_inmemoryclusters.yaml
-  - bases/infrastructure.cluster.x-k8s.io_inmemoryclustertemplates.yaml
-  - bases/infrastructure.cluster.x-k8s.io_inmemorymachines.yaml
-  - bases/infrastructure.cluster.x-k8s.io_inmemorymachinetemplates.yaml
+- bases/infrastructure.cluster.x-k8s.io_inmemoryclusters.yaml
+- bases/infrastructure.cluster.x-k8s.io_inmemoryclustertemplates.yaml
+- bases/infrastructure.cluster.x-k8s.io_inmemorymachines.yaml
+- bases/infrastructure.cluster.x-k8s.io_inmemorymachinetemplates.yaml
 # +kubebuilder:scaffold:crdkustomizeresource
 
-patchesStrategicMerge:
-  # [WEBHOOK] To enable webhook, uncomment all the sections with [WEBHOOK] prefix.
-  # patches here are for enabling the conversion webhook for each CRD
-  - patches/webhook_in_inmemoryclusters.yaml
-  - patches/webhook_in_inmemoryclustertemplates.yaml
-  - patches/webhook_in_inmemorymachines.yaml
-  - patches/webhook_in_inmemorymachinetemplates.yaml
-  # +kubebuilder:scaffold:crdkustomizewebhookpatch
-  # [CERTMANAGER] To enable webhook, uncomment all the sections with [CERTMANAGER] prefix.
-  # patches here are for enabling the CA injection for each CRD
-  - patches/cainjection_in_inmemoryclusters.yaml
-  - patches/cainjection_in_inmemoryclustertemplates.yaml
-  - patches/cainjection_in_inmemorymachines.yaml
-  - patches/cainjection_in_inmemorymachinetemplates.yaml
+patches:
+# [WEBHOOK] To enable webhook, uncomment all the sections with [WEBHOOK] prefix.
+# patches here are for enabling the conversion webhook for each CRD
+- path: patches/webhook_in_inmemoryclusters.yaml
+- path: patches/webhook_in_inmemoryclustertemplates.yaml
+- path: patches/webhook_in_inmemorymachines.yaml
+- path: patches/webhook_in_inmemorymachinetemplates.yaml
+# +kubebuilder:scaffold:crdkustomizewebhookpatch
+# [CERTMANAGER] To enable webhook, uncomment all the sections with [CERTMANAGER] prefix.
+# patches here are for enabling the CA injection for each CRD
+- path: patches/cainjection_in_inmemoryclusters.yaml
+- path: patches/cainjection_in_inmemoryclustertemplates.yaml
+- path: patches/cainjection_in_inmemorymachines.yaml
+- path: patches/cainjection_in_inmemorymachinetemplates.yaml
 # +kubebuilder:scaffold:crdkustomizecainjectionpatch
 
 # the following config is for teaching kustomize how to do kustomization for CRDs.
 configurations:
-  - kustomizeconfig.yaml
+- kustomizeconfig.yaml
