:seedling: improve tilt setup for local e2e

--- a/docs/book/Makefile
+++ b/docs/book/Makefile
@@ -17,7 +17,7 @@ ROOT_DIR:=$(shell dirname $(realpath $(lastword $(MAKEFILE_LIST))))
 TOOLS_DIR := $(realpath ../../hack/tools)
 TOOLS_BIN_DIR := $(TOOLS_DIR)/bin
 BIN_DIR := bin
-MDBOOK_INSTALL := $(realpath ../../scripts/ci-install-mdbook.sh)
+MDBOOK_INSTALL := $(realpath ../../scripts/install-mdbook.sh)
 
 export PATH := $(TOOLS_BIN_DIR):$(PATH)
 
