Prepare main branch for v1.8 development

--- a/test/e2e/config/docker.yaml
+++ b/test/e2e/config/docker.yaml
@@ -62,7 +62,7 @@ providers:
       new: --metrics-addr=:8080
     files:
     - sourcePath: "../data/shared/v1.0/metadata.yaml"
-  - name: "{go://sigs.k8s.io/cluster-api@v1.5}" # supported release in the v1beta1 series; this is used for v1beta1 --> main clusterctl upgrades test only.
+  - name: "{go://sigs.k8s.io/cluster-api@v1.5}" # supported release in the v1beta1 series; this is used for v1alpha3 --> v1beta1 --> main clusterctl upgrades test only.
     value: "https://github.com/kubernetes-sigs/cluster-api/releases/download/{go://sigs.k8s.io/cluster-api@v1.5}/core-components.yaml"
     type: "url"
     contract: v1beta1
@@ -71,7 +71,7 @@ providers:
       new: --metrics-addr=:8080
     files:
     - sourcePath: "../data/shared/v1.5/metadata.yaml"
-  - name: "{go://sigs.k8s.io/cluster-api@v1.6}" # latest published release in the v1beta1 series; this is used for v1beta1 --> main clusterctl upgrades test only.
+  - name: "{go://sigs.k8s.io/cluster-api@v1.6}" # supported release in the v1beta1 series; this is used for v1alpha4 --> v1beta1 --> main clusterctl upgrades test only.
     value: "https://github.com/kubernetes-sigs/cluster-api/releases/download/{go://sigs.k8s.io/cluster-api@v1.6}/core-components.yaml"
     type: "url"
     contract: v1beta1
@@ -80,7 +80,16 @@ providers:
       new: --metrics-addr=:8080
     files:
       - sourcePath: "../data/shared/v1.6/metadata.yaml"
-  - name: v1.7.99 # next; use manifest from source files
+  - name: "{go://sigs.k8s.io/cluster-api@v1.7}" # latest published release in the v1beta1 series; this is used for v1beta1 --> main clusterctl upgrades test only.
+    value: "https://github.com/kubernetes-sigs/cluster-api/releases/download/{go://sigs.k8s.io/cluster-api@v1.7}/core-components.yaml"
+    type: "url"
+    contract: v1beta1
+    replacements:
+    - old: --metrics-addr=127.0.0.1:8080
+      new: --metrics-addr=:8080
+    files:
+      - sourcePath: "../data/shared/v1.7/metadata.yaml"
+  - name: v1.8.99 # next; use manifest from source files
     value: ../../../config/default
     replacements:
     - old: "--leader-elect"
@@ -118,7 +127,7 @@ providers:
       new: --metrics-addr=:8080
     files:
     - sourcePath: "../data/shared/v1.0/metadata.yaml"
-  - name: "{go://sigs.k8s.io/cluster-api@v1.5}" # supported release in the v1beta1 series; this is used for v1beta1 --> main clusterctl upgrades test only.
+  - name: "{go://sigs.k8s.io/cluster-api@v1.5}" # supported release in the v1beta1 series; this is used for v1alpha3 --> v1beta1 --> main clusterctl upgrades test only.
     value: "https://github.com/kubernetes-sigs/cluster-api/releases/download/{go://sigs.k8s.io/cluster-api@v1.5}/bootstrap-components.yaml"
     type: "url"
     contract: v1beta1
@@ -127,7 +136,7 @@ providers:
       new: --metrics-addr=:8080
     files:
     - sourcePath: "../data/shared/v1.5/metadata.yaml"
-  - name: "{go://sigs.k8s.io/cluster-api@v1.6}" # latest published release in the v1beta1 series; this is used for v1beta1 --> main clusterctl upgrades test only.
+  - name: "{go://sigs.k8s.io/cluster-api@v1.6}" # supported release in the v1beta1 series; this is used for v1alpha4 --> v1beta1 --> main clusterctl upgrades test only.
     value: "https://github.com/kubernetes-sigs/cluster-api/releases/download/{go://sigs.k8s.io/cluster-api@v1.6}/bootstrap-components.yaml"
     type: "url"
     contract: v1beta1
@@ -136,7 +145,16 @@ providers:
       new: --metrics-addr=:8080
     files:
     - sourcePath: "../data/shared/v1.6/metadata.yaml"
-  - name: v1.7.99 # next; use manifest from source files
+  - name: "{go://sigs.k8s.io/cluster-api@v1.7}" # latest published release in the v1beta1 series; this is used for v1beta1 --> main clusterctl upgrades test only.
+    value: "https://github.com/kubernetes-sigs/cluster-api/releases/download/{go://sigs.k8s.io/cluster-api@v1.7}/bootstrap-components.yaml"
+    type: "url"
+    contract: v1beta1
+    replacements:
+    - old: --metrics-addr=127.0.0.1:8080
+      new: --metrics-addr=:8080
+    files:
+    - sourcePath: "../data/shared/v1.7/metadata.yaml"
+  - name: v1.8.99 # next; use manifest from source files
     value: ../../../bootstrap/kubeadm/config/default
     replacements:
     - old: "--leader-elect"
@@ -174,7 +192,7 @@ providers:
       new: --metrics-addr=:8080
     files:
     - sourcePath: "../data/shared/v1.0/metadata.yaml"
-  - name: "{go://sigs.k8s.io/cluster-api@v1.5}" # supported release in the v1beta1 series; this is used for v1beta1 --> main clusterctl upgrades test only.
+  - name: "{go://sigs.k8s.io/cluster-api@v1.5}" # supported release in the v1beta1 series; this is used for v1alpha3 --> v1beta1 --> main clusterctl upgrades test only.
     value: "https://github.com/kubernetes-sigs/cluster-api/releases/download/{go://sigs.k8s.io/cluster-api@v1.5}/control-plane-components.yaml"
     type: "url"
     contract: v1beta1
@@ -183,7 +201,7 @@ providers:
       new: --metrics-addr=:8080
     files:
     - sourcePath: "../data/shared/v1.5/metadata.yaml"
-  - name: "{go://sigs.k8s.io/cluster-api@v1.6}" # latest published release in the v1beta1 series; this is used for v1beta1 --> main clusterctl upgrades test only.
+  - name: "{go://sigs.k8s.io/cluster-api@v1.6}" # supported release in the v1beta1 series; this is used for v1alpha4 --> v1beta1 --> main clusterctl upgrades test only.
     value: "https://github.com/kubernetes-sigs/cluster-api/releases/download/{go://sigs.k8s.io/cluster-api@v1.6}/control-plane-components.yaml"
     type: "url"
     contract: v1beta1
@@ -192,7 +210,16 @@ providers:
       new: --metrics-addr=:8080
     files:
     - sourcePath: "../data/shared/v1.6/metadata.yaml"
-  - name: v1.7.99 # next; use manifest from source files
+  - name: "{go://sigs.k8s.io/cluster-api@v1.7}" # latest published release in the v1beta1 series; this is used for v1beta1 --> main clusterctl upgrades test only.
+    value: "https://github.com/kubernetes-sigs/cluster-api/releases/download/{go://sigs.k8s.io/cluster-api@v1.7}/control-plane-components.yaml"
+    type: "url"
+    contract: v1beta1
+    replacements:
+    - old: --metrics-addr=127.0.0.1:8080
+      new: --metrics-addr=:8080
+    files:
+    - sourcePath: "../data/shared/v1.7/metadata.yaml"
+  - name: v1.8.99 # next; use manifest from source files
     value: ../../../controlplane/kubeadm/config/default
     replacements:
     - old: "--leader-elect"
@@ -233,7 +260,7 @@ providers:
     files:
     - sourcePath: "../data/shared/v1.0/metadata.yaml"
     - sourcePath: "../data/infrastructure-docker/v1.0/cluster-template.yaml"
-  - name: "{go://sigs.k8s.io/cluster-api@v1.5}" # supported release in the v1beta1 series; this is used for v1beta1 --> main clusterctl upgrades test only.
+  - name: "{go://sigs.k8s.io/cluster-api@v1.5}" # supported release in the v1beta1 series; this is used for v1alpha3 --> v1beta1 --> main clusterctl upgrades test only.
     value: "https://github.com/kubernetes-sigs/cluster-api/releases/download/{go://sigs.k8s.io/cluster-api@v1.5}/infrastructure-components-development.yaml"
     type: "url"
     contract: v1beta1
@@ -245,7 +272,7 @@ providers:
     - sourcePath: "../data/infrastructure-docker/v1.5/cluster-template.yaml"
     - sourcePath: "../data/infrastructure-docker/v1.5/cluster-template-topology.yaml"
     - sourcePath: "../data/infrastructure-docker/v1.5/clusterclass-quick-start.yaml"
-  - name: "{go://sigs.k8s.io/cluster-api@v1.6}" # latest published release in the v1beta1 series; this is used for v1beta1 --> main clusterctl upgrades test only.
+  - name: "{go://sigs.k8s.io/cluster-api@v1.6}" # supported release in the v1beta1 series; this is used for v1alpha4 --> v1beta1 --> main clusterctl upgrades test only.
     value: "https://github.com/kubernetes-sigs/cluster-api/releases/download/{go://sigs.k8s.io/cluster-api@v1.6}/infrastructure-components-development.yaml"
     type: "url"
     contract: v1beta1
@@ -257,7 +284,19 @@ providers:
     - sourcePath: "../data/infrastructure-docker/v1.6/cluster-template.yaml"
     - sourcePath: "../data/infrastructure-docker/v1.6/cluster-template-topology.yaml"
     - sourcePath: "../data/infrastructure-docker/v1.6/clusterclass-quick-start.yaml"
-  - name: v1.7.99 # next; use manifest from source files
+  - name: "{go://sigs.k8s.io/cluster-api@v1.7}" # latest published release in the v1beta1 series; this is used for v1beta1 --> main clusterctl upgrades test only.
+    value: "https://github.com/kubernetes-sigs/cluster-api/releases/download/{go://sigs.k8s.io/cluster-api@v1.7}/infrastructure-components-development.yaml"
+    type: "url"
+    contract: v1beta1
+    replacements:
+    - old: --metrics-addr=127.0.0.1:8080
+      new: --metrics-addr=:8080
+    files:
+    - sourcePath: "../data/shared/v1.7/metadata.yaml"
+    - sourcePath: "../data/infrastructure-docker/v1.7/cluster-template.yaml"
+    - sourcePath: "../data/infrastructure-docker/v1.7/cluster-template-topology.yaml"
+    - sourcePath: "../data/infrastructure-docker/v1.7/clusterclass-quick-start.yaml"
+  - name: v1.8.99 # next; use manifest from source files
     value: ../../../test/infrastructure/docker/config/default
     replacements:
     - old: "--leader-elect"
@@ -287,7 +326,7 @@ providers:
 - name: in-memory
   type: InfrastructureProvider
   versions:
-  - name: v1.7.99 # next; use manifest from source files
+  - name: v1.8.99 # next; use manifest from source files
     value: ../../../test/infrastructure/inmemory/config/default
     replacements:
     - old: "--leader-elect"
@@ -301,7 +340,7 @@ providers:
 - name: test-extension
   type: RuntimeExtensionProvider
   versions:
-    - name: v1.7.99 # next; use manifest from source files
+    - name: v1.8.99 # next; use manifest from source files
       value: ../../../test/extension/config/default
       replacements:
       - old: "--leader-elect"
